2002-11-13  Wakaba <w@suika.fam.cx>

	* ChangeLog: New file.
	* Formatter.pm: New module.