@@ -1,3 +1,7 @@
+2002-12-04  Wakaba  <w@suika.fam.cx>
+
+	* Formatter.pm (replace): Accept ")" in quoted-string.
+
 2002-11-13  Wakaba <w@suika.fam.cx>
 
 	* ChangeLog: New file.
